--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<html lang="en"><head><link rel="icon" href="favicon.ico" type="image/x-icon">
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
@@ -106,6 +107,7 @@
       This is a WIP website that is coming soon. Thanks for visiting.
     </p>
   </div>
+
 
 
 
