--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <title>Home</title>
   <style>
     body {
       margin: 0;
@@ -12,6 +12,9 @@
       background-position: top left; /* Position at the top-left corner */
       background-size: auto; /* Keep the image size as is */
       color: #333;
+    }
+    .logo {
+    background-color: #ff6000;
     }
 
     .navbar {
@@ -95,7 +98,7 @@
 
   <div class="navbar">
     <a href="/" class="logo">
-      <img src="/Images/owange1024x1024.png" alt="Logo">
+      <img src="favicon.ico" alt="Logo">
     </a>
     
     <a href="/" class="home-button">Home</a>
